--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "vite": "^7.1.12"
   },
   "dependencies": {
-    "reveal.js": "^5.2.1"
+    "reveal.js": "^5.2.1",
+    "tippy.js": "^6.3.7"
   }
 }
